Add styles and comments

--- a/src/Components/Calculator/Calculator.scss
+++ b/src/Components/Calculator/Calculator.scss
@@ -1,9 +1,8 @@
 .calculator_box {
   flex-basis: 65%;
   height: 100%;
-  padding: 4rem;
+  padding: 7rem 4rem 4rem;
   background-color: rgb(149, 51, 134);
-
 }
 .calculator_display {
   width: 100%;
