--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,7 @@
 @media screen and (max-width: 600px) {
   .app {
     height: 60rem;
+    margin-bottom: 5rem;
   }
 }
 
@@ -39,6 +40,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .error {
   width: 100%;
   font-size: 2.5rem;
