--- a/src/Components/SideBar/SideBar.scss
+++ b/src/Components/SideBar/SideBar.scss
@@ -1,8 +1,7 @@
 .sidebar {
   height: 100%;
-  width: 100%;
-  background-color: rgb(248, 83, 223);
   flex-basis: 35%;
+  background-color: rgb(248, 83, 223);
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -13,22 +12,28 @@
   width: 10rem;
   height: 10rem;
   fill: rgb(134, 11, 124);
+  fill-opacity: .7;
   transition: all 0.3s;
   cursor: pointer;
 
   &:hover {
-    fill: rgb(203, 18, 188);
+    fill: rgb(193, 20, 179);
   }
+}
+
+.active {
+  fill-opacity: 1;
 }
 
 @media screen and (max-width: 768px) {
   .sidebar {
     flex-direction: row;
-    padding: 2.5rem;
+    padding: 2.5rem 0;
+    height: fit-content;
   }
 
   .icon {
-    width: 7rem;
-    height: 7rem;
+    width: 8rem;
+    height: 8rem;
   }
 }
